--- a/.github/workflows/docs-build-check.yaml
+++ b/.github/workflows/docs-build-check.yaml
@@ -1,4 +1,4 @@
-name: Documentation Build Check
+name: Documentation (Docusaurus) Build Check
 
 on:
   pull_request:
@@ -38,72 +38,28 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  build_docs:
-    name: Build Documentation
+  build_and_test_docs:
+    name: Build & Test Documentation
+    uses: Chisanan232/GitHub-Action_Reusable_Workflows-Python/.github/workflows/rw_docusaurus_operations.yaml@master
+    with:
+      operation: test
+      node-version: '22'
+      working-directory: docs
+      upload-artifacts: true
+
+  validate_build:
+    name: Validate Build Quality
+    needs: build_and_test_docs
     runs-on: ubuntu-latest
-    
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v5
+      - name: Download build artifacts
+        uses: actions/download-artifact@v6
         with:
-          fetch-depth: 1  # Shallow clone for build check
-
-      - name: Install pnpm
-        uses: pnpm/action-setup@v4
-        with:
-          version: 10
-          run_install: false
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v6
-        with:
-          node-version: '22'
-          cache: 'pnpm'
-          cache-dependency-path: docs/pnpm-lock.yaml
-
-      - name: Cache Docusaurus build
-        uses: actions/cache@v4
-        with:
-          path: |
-            docs/.docusaurus
-            docs/node_modules/.cache
-          key: ${{ runner.os }}-docusaurus-${{ hashFiles('docs/pnpm-lock.yaml') }}
-          restore-keys: |
-            ${{ runner.os }}-docusaurus-
-
-      - name: Install dependencies
-        working-directory: ./docs
-        run: pnpm install --frozen-lockfile
-
-#      - name: Type check
-#        working-directory: ./docs
-#        run: pnpm typecheck
-
-      - name: Build documentation
-        working-directory: ./docs
-        run: pnpm build
-
-      - name: Check build output
-        run: |
-          if [ ! -d "docs/build" ]; then
-            echo "❌ Build directory not found!"
-            exit 1
-          fi
-          
-          if [ ! -f "docs/build/index.html" ]; then
-            echo "❌ Main index.html not generated!"
-            exit 1
-          fi
-          
-          # Check for common build artifacts
-          BUILD_SIZE=$(du -sh docs/build | cut -f1)
-          echo "✅ Documentation built successfully!"
-          echo "📁 Build size: $BUILD_SIZE"
-          echo "📄 Files generated: $(find docs/build -type f | wc -l)"
+          name: documentation-build
+          path: docs/build
 
       - name: Validate build quality
         run: |
-          # Check for broken links in build output (basic validation)
           cd docs/build
           
           # Count HTML files
