--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,6 +51,7 @@ mcp = [
     "mcp[cli]>=1.10.1",
     "slack-sdk>=3.36.0",
     "pydantic>=2.11.7",
+    "pydantic-settings>=2.7.1",
 ]
 
 # HTTP server support for Slack webhook features (but doesn't support integrated mode)
@@ -58,6 +59,7 @@ webhook = [
     "fastapi>=0.116.1",
     "uvicorn>=0.35.0",
     "pydantic>=2.11.7",
+    "pydantic-settings>=2.7.1",
 ]
 
 # Everything supported by this project
@@ -65,6 +67,7 @@ all = [
     "mcp[cli]>=1.10.1",
     "slack-sdk>=3.36.0",
     "pydantic>=2.11.7",
+    "pydantic-settings>=2.7.1",
     "fastapi>=0.116.1",
     "uvicorn>=0.35.0",
 ]
