--- a/.env.example
+++ b/.env.example
@@ -81,6 +81,42 @@ REDIS_URL=redis://localhost:6379/0
 KAFKA_BOOTSTRAP=broker:9092
 
 # ─────────────────────────────────────────────────────────────────────────────
+# Optional: Web Server CORS Configuration
+# ─────────────────────────────────────────────────────────────────────────────
+# CORS (Cross-Origin Resource Sharing) settings for the web server
+# These settings control which origins can access the webhook server
+
+# Allowed origins for CORS requests
+# Format: comma-separated list of origins or "*" for all origins
+# Examples:
+#   - "*" (default) - Allow all origins (development)
+#   - "https://yourdomain.com" - Allow specific domain
+#   - "https://app.yourdomain.com,https://admin.yourdomain.com" - Allow multiple domains
+#   - "http://localhost:3000,http://localhost:8080" - Allow local development
+CORS_ALLOW_ORIGINS="*"
+
+# Allow credentials in CORS requests (cookies, authorization headers, etc.)
+# Set to "true" to allow credentials, "false" to disallow
+# Default: true
+CORS_ALLOW_CREDENTIALS=true
+
+# Allowed HTTP methods for CORS requests
+# Format: comma-separated list of HTTP methods or "*" for all methods
+# Examples:
+#   - "*" (default) - Allow all methods
+#   - "GET,POST,PUT,DELETE" - Allow specific methods
+#   - "GET,POST" - Allow only read methods
+CORS_ALLOW_METHODS="*"
+
+# Allowed HTTP headers for CORS requests
+# Format: comma-separated list of headers or "*" for all headers
+# Examples:
+#   - "*" (default) - Allow all headers
+#   - "Content-Type,Authorization" - Allow specific headers
+#   - "Content-Type,Authorization,X-Requested-With" - Allow common headers
+CORS_ALLOW_HEADERS="*"
+
+# ─────────────────────────────────────────────────────────────────────────────
 # Notes
 # ─────────────────────────────────────────────────────────────────────────────
 # 1. Never commit this file with real credentials to version control
