♻️ Migrate t the properties only for tests into the test setting model.

--- a/.env.example
+++ b/.env.example
@@ -41,22 +41,6 @@ SLACK_USER_TOKEN=xoxp-your-slack-user-token
 SLACK_SIGNING_SECRET=<your-slack-signing-secret>
 
 # ─────────────────────────────────────────────────────────────────────────────
-# Optional: Development & Testing Configuration
-# ─────────────────────────────────────────────────────────────────────────────
-# Test channel name (useful for development/testing)
-# Format: #channel-name (include the # symbol)
-SLACK_TEST_CHANNEL='#your-channel-name'
-
-# Test channel ID (recommended over channel name)
-# Format: C1234567890
-# Get it from: Right-click channel → View channel details → Copy channel ID
-SLACK_TEST_CHANNEL_ID=<your-channel-id>
-
-# End-to-end test API token (for E2E tests only)
-# Use the same value as SLACK_BOT_TOKEN or a separate test token
-E2E_TEST_API_TOKEN=<SLACK_BOT_TOKEN>
-
-# ─────────────────────────────────────────────────────────────────────────────
 # Optional: Message Queue Backend Configuration
 # ─────────────────────────────────────────────────────────────────────────────
 # Queue backend type
@@ -124,7 +108,7 @@ CORS_ALLOW_HEADERS="*"
 # 3. Use different .env files for different environments:
 #    - .env.development (for local development)
 #    - .env.production (for production deployment)
-#    - .env.test (for testing)
+#    - test/.env.test (for testing - see test/.env.test.example)
 # 4. Set appropriate file permissions: chmod 600 .env
 # 5. For Docker deployments, you can mount this file or pass variables directly
 #
