✏️ Add note for the test part setting model.

--- a/.env.example
+++ b/.env.example
@@ -112,6 +112,7 @@ CORS_ALLOW_HEADERS="*"
 # 4. Set appropriate file permissions: chmod 600 .env
 # 5. For Docker deployments, you can mount this file or pass variables directly
 #
+# For testing configuration, see: test/.env.test.example
 # For more information, see:
 # https://chisanan232.github.io/slack-mcp-server/document/server-references/environment-configuration
 # =============================================================================
