✏️ Add note for the source code part setting model.

--- a/test/.env.test.example
+++ b/test/.env.test.example
@@ -6,6 +6,12 @@
 #
 # This file is used ONLY during test execution and is separate from
 # the main production configuration to avoid confusion and security risks.
+#
+# RELATIONSHIP TO MAIN .env FILE:
+# - Main .env.example → .env: For production/development server configuration
+# - test/.env.test.example → test/.env.test: For test execution only
+# - Tests automatically load from test/.env.test when available
+# - Use MCP_NO_ENV_FILE=true to prevent loading main .env during tests
 # =============================================================================
 
 # ─────────────────────────────────────────────────────────────────────────────
