✏️ Update the code owner setting about the document scope.

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -27,7 +27,14 @@
 /docs/                                @Chisanan232
 *.md                                  @Chisanan232
 *.mdx                                 @Chisanan232
+*.js                                  @Chisanan232
 *.ts                                  @Chisanan232
+*.tsx                                 @Chisanan232
+*.css                                 @Chisanan232
+*.html                                @Chisanan232
+*.json                                @Chisanan232
+*.yml                                 @Chisanan232
+*.yaml                                @Chisanan232
 
 #######################################
 # CI/CD Configuration
